# consent-redaction-log-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/consent_redaction_log/: __init__.py  log.py  redact.py
tests/: test_log.py  test_redact.py
