[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "consent-redaction-log-py"
version = "0.1.0"
description = "Record consent-aware redactions for privacy review trails. Zero-dep Python port of @mukundakatta/consent-redaction-log."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Katta", email = "mukunda.vjcs6@gmail.com" }]
keywords = [
  "privacy",
  "redaction",
  "consent",
  "pii",
  "audit",
  "compliance",
  "ai",
  "guardrails",
  "logging",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/consent-redaction-log-py"
Issues = "https://github.com/MukundaKatta/consent-redaction-log-py/issues"
Source = "https://github.com/MukundaKatta/consent-redaction-log-py"
"JS sibling" = "https://github.com/MukundaKatta/consent-redaction-log"

[tool.hatch.build.targets.wheel]
packages = ["src/consent_redaction_log"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
